<!--
	IFS 1.3 (Iterative Forward Search)
	CourseTT 1.3 (University Course Timetabling)
	StudentSct 1.3 (Student Sectioning)
	ExamTT 1.3 (Examination Timetabling)
	Copyright (C) 2007 - 2014 Tomas Muller
	muller@unitime.org, http://muller.unitime.org
	
	This library is free software; you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as
    published by the Free Software Foundation; either version 3 of the
    License, or (at your option) any later version.

	This library is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
	Lesser General Public License for more details.

	You should have received a copy of the GNU Lesser General Public
	License along with this library; if not see <http://www.gnu.org/licenses />.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>org.unitime</groupId>
	<artifactId>cpsolver</artifactId>
	<version>1.3-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>CPSolver</name>
	<url>http://www.cpsolver.org</url>
	<description>
		The constraint solver library contains a local search based framework that allows
		modeling of a problem using constraint programming primitives (variables, values, constraints).
	</description>
	
	<organization>
		<name>UniTime, s.r.o.</name>
		<url>http://www.unitime.org</url>
	</organization>
	
	<developers>
		<developer>
			<id>muller</id>
			<name>Tomas Muller</name>
			<email>muller@unitime.org</email>
			<url>http://muller.unitime.org</url>
			<roles>
				<role>owner</role>
			</roles>
		</developer>
	</developers>
	
	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.0</version>
		</dependency>
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
		</dependency>
	</dependencies>
	
	<scm>
		<connection>scm:git:git://github.com/UniTime/cpsolver.git</connection>
		<developerConnection>scm:git:git@github.com:UniTime/cpsolver.git</developerConnection>
		<url>https://github.com/UniTime/cpsolver</url>
		<tag>cpsolver-1.3</tag>
	</scm>
	
	<build>
		<directory>target</directory>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory/>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.build.directory}</directory>
				<includes>
					<include>cpsolver.version</include>
				</includes>
			</resource>
			<resource>
				<directory>src</directory>
				<includes>
					<include>log4j2.xml</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>org.cpsolver.coursett.Test</mainClass>
						</manifest>
						<manifestEntries>
							<Build-Number>${build.number}</Build-Number>
							<Build-Date>${build.date}</Build-Date>
							<Revision-Number>${revision.number}</Revision-Number>
							<Implementation-Title>${project.name}</Implementation-Title>
							<Implementation-Version>${project.version}.${build.number}</Implementation-Version>
							<Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
							<Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<author>true</author>
					<version>true</version>
					<use>true</use>
					<windowtitle>Constraint Solver API Documentation -- ${project.name} v${project.version}</windowtitle>
					<source>1.8</source>
					<linksource>true</linksource>
					<breakiterator>true</breakiterator>
					<detectLinks>true</detectLinks>
					<outputDirectory>${project.build.directory}/doc</outputDirectory>
					<doctitle><![CDATA[
    					<table border='0' style='font-size: 11pt;font-weight: normal;'><tr><td align='left'>
    					IFS 1.3 (Iterative Forward Search)<br>
    					CourseTT 1.3 (University Course Timetabling)<br>
    					StudentSct 1.3 (Student Sectioning)<br>
    					ExamTT 1.3 (Examination Timetabling)<br>
    					Copyright (C) 2006 - 2020 Tom&#225;&#353; M&#252;ller<br>
    					<a href='mailto:muller@unitime.org'>muller@unitime.org</a><br>
    					<a href='http://muller.unitime.org'>http://muller.unitime.org</a><br>
    					<br>
    					This library is free software; you can redistribute it and/or modify
    					it under the terms of the GNU Lesser General Public License as
    					published by the Free Software Foundation; either version 3 of the
    					License, or (at your option) any later version.
    					<br><br>
    					This library is distributed in the hope that it will be useful, but
    					WITHOUT ANY WARRANTY; without even the implied warranty of
    					MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    					Lesser General Public License for more details.
    					<br><br>
    					You should have received a copy of the GNU Lesser General Public
    					License along with this library; if not see
    					<a href='http://www.gnu.org/licenses/'>http://www.gnu.org/licenses/</a>.
    					</td></tr></table>
   					]]></doctitle>
					<groups>
						<group>
							<title>Iterative Forward Search</title>
							<packages>org.cpsolver.ifs*</packages>
						</group>
						<group>
							<title>Iterative Forward Search Examples</title>
							<packages>org.cpsolver.ifs.example*</packages>
						</group>
						<group>
							<title>University Course Timetabling</title>
							<packages>org.cpsolver.coursett*</packages>
						</group>
						<group>
							<title>Student Sectioning</title>
							<packages>org.cpsolver.studentsct*</packages>
						</group>
						<group>
							<title>Examination Timetabling</title>
							<packages>org.cpsolver.exam*</packages>
						</group>
						<group>
							<title>Instructor Scheduling</title>
							<packages>org.cpsolver.instructor*</packages>
						</group>
					</groups>
					<links>
						<link>https://dom4j.github.io/javadoc/2.1.3/</link>
					</links>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<descriptors>
						<descriptor>distribution.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<buildNumberPropertyName>revision.number</buildNumberPropertyName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<exportAntProperties>true</exportAntProperties>
							<target>
								<loadproperties srcFile="build.number" />
								<!--  <buildnumber /> -->
								<tstamp>
									<format property="build.date" pattern="EEE, d MMM yyyy" locale="en" />
								</tstamp>
								<propertyfile file="${project.build.directory}/cpsolver.version" comment="CPSolver version file">
									<entry key="cpsolver.version" value="${project.version}" />
									<entry key="cpsolver.build_nbr" value="${build.number}" />
									<entry key="cpsolver.rel_date" value="${build.date}" />
									<entry key="cpsolver.revision" value="${revision.number}" />
								</propertyfile>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5</version>
					<dependencies>
						<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<classpathContainers>
						<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
					</classpathContainers>
				</configuration>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>2.2</version>
			</extension>
		</extensions>
	</build>
	
	<profiles>
		<profile>
			<id>docline-java8-disable</id>
			<activation>
				<jdk>[1.8,</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<!-- 	
	<distributionManagement>
		<repository>
			<id>cpsolver.org</id>
			<name>CPSolver Release Repository</name>
			<url>ftp://maven.cpsolver.org</url>
		</repository>
	</distributionManagement>
	 -->
</project>
